# wasm-i18n

./: Cargo.toml  README.md  index.html  index.js  package-lock.json  package.json  vite.config.mjs  webpack.config.cjs  webpack.dev.cjs
examples/: index.html  index.js
examples/translations/: en.json
src/: format.rs  helpers.rs  index.js  lib.rs  manager.rs  utils.rs
tests/: web.rs
tmp/cache/vite/: last-build-production.json
