[package]
name = "wasm-i18n"
version = "0.2.6"
authors = ["Pavel Kuzmin <Virus191288@gmail.com>"]
edition = "2018"
description = "A lightweight, high-performance internationalization module for web applications using WebAssembly and Rust."
repository = "https://github.com/s00d/wasm-i18n"
license = "MIT OR Apache-2.0"


[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde-wasm-bindgen = "0.6"
wee_alloc = { version = "0.4", optional = true }
log = "0.4.22"
regex = "1.11.1"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["Request", "RequestInit", "Response", "Window", "Headers"] }
js-sys = "0.3.76"
lazy_static = "1.5.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
debug = false
